greeter/manifests/dep-svc.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: greeter-dep-v1
  namespace: exercises
spec:
  replicas: 1
  selector:
    matchLabels:
      app: greeter
      version: v1
  template:
    metadata:
      labels:
        app: greeter
        version: v1
    spec:
      containers:
        - name: greeter-app
          image: aritrabb/greeter:v1

---

apiVersion: v1
kind: Service
metadata:
  name: greeter-svc-v1
  namespace: exercises
spec:
  type: ClusterIP
  selector:
    app: greeter
    version: v1
  ports:
    - port: 4567
      protocol: TCP
      targetPort: 9000

---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: greeter-dep-v2
  namespace: exercises
spec:
  replicas: 1
  selector:
    matchLabels:
      app: greeter
      version: v2
  template:
    metadata:
      labels:
        app: greeter
        version: v2
    spec:
      containers:
        - name: greeter-app
          image: aritrabb/greeter:v2

---

apiVersion: v1
kind: Service
metadata:
  name: greeter-svc-v2
  namespace: exercises
spec:
  type: ClusterIP
  selector:
    app: greeter
    version: v2
  ports:
    - port: 4567
      protocol: TCP
      targetPort: 9000
