greeter/manifests/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: greeter-route
  namespace: exercises
spec:
  parentRefs:
  - group: ""
    kind: Service
    name: greeter-svc
    port: 4567
  rules:
  - backendRefs:
    - name: greeter-svc-v1
      port: 4567
      weight: 75
    - name: greeter-svc-v2
      port: 4567
      weight: 25
